[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brutasse"
version = "0.0.1"
dependencies = [
    "progressbar2",
    "termcolor",
    "asyncssh",
    "sqlalchemy",
    "pyyaml",
    "pyroute2",
    "psycopg2",
    "click",
    "anyio",
]

[project.scripts]
brutasse = "brutasse.cli:cli"